--- a/cling/PKGBUILD
+++ b/cling/PKGBUILD
@@ -59,5 +59,5 @@ package() {
     cd "$srcdir/build"
     DESTDIR="$pkgdir" ninja install
     install -d "$pkgdir/usr/bin"
-    ln -s "$pkgdir/opt/cling/bin/cling" "$pkgdir/usr/bin/cling"    
+    ln -s "/opt/cling/bin/cling" "$pkgdir/usr/bin/cling"
 }
