Update clang to 18.1.1
Signed-off-by: Will Killian <william.killian@outlook.com>

--- a/clang-custom-release/PKGBUILD
+++ b/clang-custom-release/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=('clang-custom-release')
-_pkgver=18.1.0
-_pkg_suffix=rc2
+_pkgver=18.1.1
+_pkg_suffix=""
 _pkgver_suffix=${_pkgver}
 _pkgver_dash_suffix=${_pkgver}
 if [[ -n ${_pkg_suffix} ]]; then
